---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024-12-10
  Bugfixes:
    - Fixed an issue that could cause a crash if multiple reprocessors were marked for deconstruction at once
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024-11-21
  Bugfixes:
    - Fixed folder capitalization issue that prevented the mod from loading
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-11-20
  Major Features:
    - Initial release.