@@ -6,11 +6,17 @@ sr-scrap-reprocessor=Scrap reprocessor
 sr-electronic-scrap=Electronic scrap
 sr-metallic-scrap=Metallic scrap
 sr-architectural-scrap=Architectural scrap
+sr-iron-slag-chunk=Iron slag chunk
+sr-copper-slag-chunk=Copper slag chunk
+sr-mineral-slag-chunk=Mineral slag chunk
 
 [item-description]
 sr-electronic-scrap=Can be recycled or reprocessed.
 sr-metallic-scrap=Can be recycled or reprocessed.
 sr-architectural-scrap=Can be recycled or reprocessed.
+sr-iron-slag-chunk=Can be smelted in a furnace or melted in a foundry.
+sr-copper-slag-chunk=Can be smelted in a furnace or melted in a foundry.
+sr-mineral-slag-chunk=Can be recycled or melted in a foundry.
 
 [fluid-name]
 sr-mineral-slurry=Mineral slurry
@@ -28,6 +34,7 @@ sr-metallic-scrap-recycling=Metallic scrap recycling
 sr-architectural-scrap-reprocessing=Architectural scrap reprocessing
 sr-architectural-scrap-recycling=Architectural scrap recycling
 sr-mineral-slurry-separation=Mineral slurry separation
+sr-lava-rapid-cooling=Lava rapid cooling
 
 [technology-name]
 sr-scrap-reprocessing=Scrap reprocessing
@@ -47,8 +54,8 @@ scrap-reprocessor-mineral-slurry-setting=Removes iron ore as a byproduct of mine
 
 [string-mod-setting]
 scrap-reprocessor-quality-setting-none=None [img=info]
-scrap-reprocessor-quality-setting-vanilla=Vanilla (5%) [img=info]
-scrap-reprocessor-quality-setting-boosted=Boosted (10%) [img=info]
+scrap-reprocessor-quality-setting-vanilla=Vanilla (10%) [img=info]
+scrap-reprocessor-quality-setting-boosted=Boosted (20%) [img=info]
 scrap-reprocessor-architectural-setting-default=Default [img=info]
 scrap-reprocessor-architectural-setting-vanilla=Vanilla-like [img=info]
 scrap-reprocessor-architectural-setting-hybrid=Hybrid [img=info]
@@ -56,8 +63,8 @@ scrap-reprocessor-architectural-setting-boosted=Extra Slurry [img=info]
 
 [string-mod-setting-description]
 scrap-reprocessor-quality-setting-none=Removes the base quality boost of the scrap reprocessor and the Quality 3 technology requirement. Don't like having to sort out quality scrap, huh?
-scrap-reprocessor-quality-setting-vanilla=The scrap reprocessor has a base quality of 5%, keeping in line with vanilla's lower quality values.
-scrap-reprocessor-quality-setting-boosted=The scrap reprocessor has a base quality of 10%. Pairs well with mods that make quality modules stronger.
+scrap-reprocessor-quality-setting-vanilla=The scrap reprocessor has a base quality of 10%, keeping in line with vanilla's lower quality values.
+scrap-reprocessor-quality-setting-boosted=The scrap reprocessor has a base quality of 20%. Pairs well with mods that make quality modules stronger.
 scrap-reprocessor-architectural-setting-default=Architectural scrap will recycle into low density structure, stone brick, and iron sticks. Scrap reprocessing will be water-neutral overall.
 scrap-reprocessor-architectural-setting-vanilla=Architectural scrap will have the vanilla scrap outputs of low density structure, concrete, and ice.
 scrap-reprocessor-architectural-setting-hybrid=Reprocessing architectural scrap will produce the default outputs, while recycling it will produce the vanilla-like outputs.
