@@ -2,6 +2,9 @@
 Version: 1.0.3
 Date: ????
   Changes:
+    - Increased the reprocessor's innate quality from 5% to 10%
+  Bugfixes:
+    - Mineral slurry separation is no longer allowed to be used to calculate recipe costs in the crafting menu
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2024-12-10
